Added input verification for devices

--- a/src/app/admin/devices/device/device.component.html
+++ b/src/app/admin/devices/device/device.component.html
@@ -27,5 +27,5 @@
 
 <div class="form-group">
   <label for="textAreaData">Data (json)</label>
-  <textarea class="form-control" id="textAreaData" rows="3" [(ngModel)]="deviceDataValue"></textarea>
+  <textarea class="form-control" id="textAreaData" rows="3" [(ngModel)]="device.data"></textarea>
 </div>
