--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
   <a class="navbar-brand" href="#">DeviceHive</a>
   <ul class="navbar-nav">
-    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="users">Users</a></li>
+    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="users" *ngIf="currentUser?.role === userRole.ADMIN">Users</a></li>
     <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="networks">Networks</a></li>
     <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="device-types">Device Types</a></li>
     <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="devices">Devices</a></li>
@@ -14,4 +14,4 @@
   </ul>
 </nav>
 
-<router-outlet></router-outlet>
+<router-outlet *ngIf="currentUser"></router-outlet>
