--- a/src/app/admin/networks/networks.component.html
+++ b/src/app/admin/networks/networks.component.html
@@ -5,7 +5,7 @@
       <tr>
         <th scope="col">Network</th>
         <th scope="col">Description</th>
-        <th scope="col" class="actions-column">Actions</th>
+        <th scope="col" class="actions-column" *ngIf="isAdmin">Actions</th>
       </tr>
       </thead>
 
@@ -13,7 +13,7 @@
       <tr *ngFor="let network of networks">
         <td >{{network.name}}</td>
         <td>{{network.description}}</td>
-        <td>
+        <td *ngIf="isAdmin">
           <button class="btn btn-primary btn-sm" (click)="openNetworkModal(editNetworkModal, network)">Edit</button>
           <button class="btn btn-danger btn-sm" (click)="deleteNetwork(network)">Delete</button>
         </td>
@@ -22,21 +22,7 @@
     </table>
   </div>
 
-  <!--<nav>-->
-    <!--<ul class="pagination justify-content-center">-->
-      <!--<li class="page-item disabled">-->
-        <!--<a class="page-link" href="#" tabindex="-1">Previous</a>-->
-      <!--</li>-->
-      <!--<li class="page-item active"><a class="page-link" href="#">1</a></li>-->
-      <!--<li class="page-item"><a class="page-link" href="#">2</a></li>-->
-      <!--<li class="page-item"><a class="page-link" href="#">3</a></li>-->
-      <!--<li class="page-item">-->
-        <!--<a class="page-link" href="#">Next</a>-->
-      <!--</li>-->
-    <!--</ul>-->
-  <!--</nav>-->
-
-  <button class="btn btn-success float-right btn-add" (click)="openNetworkModal(newNetworkModal)">Add new network</button>
+  <button class="btn btn-success float-right btn-add" *ngIf="isAdmin" (click)="openNetworkModal(newNetworkModal)">Add new network</button>
 </div>
 
 <ng-template #newNetworkModal let-c="close" let-d="dismiss">
