Date and time is now hidden by default in jwt tokens section

--- a/src/app/admin/jwt-tokens/jwt-tokens.component.scss
+++ b/src/app/admin/jwt-tokens/jwt-tokens.component.scss
@@ -8,6 +8,10 @@ ngb-timepicker {
   margin-left: $margin-base;
 }
 
+.btn-clear-expiration {
+  margin-left: $margin-base;
+}
+
 .list-group {
   margin-bottom: $margin-base;
 }
