--- a/src/app/admin/jwt-tokens/jwt-tokens.component.html
+++ b/src/app/admin/jwt-tokens/jwt-tokens.component.html
@@ -17,19 +17,23 @@
     </div>
   </div>
 
-  <form class="form-inline">
-    <div class="form-group">
-      <div class="input-group">
-        <ngb-timepicker name="tp" [(ngModel)]="time" [spinners]="false"></ngb-timepicker>
-        <input class="form-control" placeholder="yyyy-mm-dd"
-               name="dp" ngbDatepicker [(ngModel)]="date" #d="ngbDatepicker">
-        <div class="input-group-append">
-          <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button">
-            Set expiration date
-          </button>
+  <div class="row justify-content-center">
+    <form class="form-inline">
+      <div class="form-group">
+        <div class="input-group">
+          <ngb-timepicker name="tp" [(ngModel)]="time" [spinners]="false" [hidden]="!date"></ngb-timepicker>
+          <input class="form-control" placeholder="yyyy-mm-dd"
+                 name="dp" ngbDatepicker [(ngModel)]="date" #d="ngbDatepicker" [hidden]="!date">
+          <div [ngClass]="{'input-group-append': date}">
+            <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button">
+              Set expiration date
+            </button>
+          </div>
         </div>
       </div>
-    </div>
-    <button class="btn btn-primary btn-create-tokens" (click)="createTokens()">Create tokens</button>
-  </form>
+      <button class="btn btn-danger btn-clear-expiration" [hidden]="!date" (click)="clearExpirationDate()">Clear expiration date</button>
+      <button class="btn btn-primary btn-create-tokens" (click)="createTokens()">Create tokens</button>
+    </form>
+  </div>
+
 </div>
