--- a/src/app/admin/users/user-details/user-details.component.html
+++ b/src/app/admin/users/user-details/user-details.component.html
@@ -8,7 +8,7 @@
 <div class="container" *ngIf="user">
   <dh-user [user]="user"></dh-user>
 
-  <button class="btn btn-success" (click)="updateUser()">Save</button>
+  <button class="btn btn-success btn-save" (click)="updateUser()">Save</button>
 
   <ngb-tabset>
     <ngb-tab title="Networks">
@@ -18,7 +18,7 @@
             <tr>
               <th scope="col">Network</th>
               <th scope="col">Description</th>
-              <th scope="col"></th>
+              <th scope="col">Actions</th>
             </tr>
           </thead>
 
