--- a/src/app/admin/devices/device-details/device-details.component.html
+++ b/src/app/admin/devices/device-details/device-details.component.html
@@ -19,7 +19,7 @@
           <thead class="thead-light">
             <tr>
               <th scope="col">Name</th>
-              <th scope="col">Time</th>
+              <th scope="col">Time (UTC)</th>
               <th scope="col">Parameters</th>
               <th scope="col">Status</th>
               <th scope="col">Result</th>
@@ -48,7 +48,7 @@
           <thead class="thead-light">
             <tr>
               <th scope="col">Name</th>
-              <th scope="col">Time</th>
+              <th scope="col">Time (UTC)</th>
               <th scope="col">Parameters</th>
             </tr>
           </thead>
