Users and devices are now editable in modals

--- a/src/app/admin/devices/device-details/device-details.component.scss
+++ b/src/app/admin/devices/device-details/device-details.component.scss
@@ -1,6 +1,16 @@
+@import "../../../../variables";
+
 .btn {
   margin-bottom: 8px;
   margin-top: 8px;
+}
+
+.card {
+  margin-bottom: $margin-base;
+}
+
+.card-header {
+  cursor: pointer;
 }
 
 .breadcrumb {
