--- a/src/app/admin/devices/device-details/device-details.component.html
+++ b/src/app/admin/devices/device-details/device-details.component.html
@@ -5,10 +5,29 @@
   </ol>
 </nav>
 
-<div class="container" *ngIf="device">
-  <dh-device [device]="device" [networks]="networks" [deviceTypes]="deviceTypes"></dh-device>
+<div class="container" *ngIf="device && networks && deviceTypes">
+  <div>
+    <div class="card">
+      <div class="card-header" (click)="isCollapsed = !isCollapsed">
+        Device
+      </div>
 
-  <button class="btn btn-success" (click)="updateDevice()">Save</button>
+      <div id="collapse" class="collapse show" [ngbCollapse]="isCollapsed">
+        <div class="card-body">
+          <p>Name: {{device.name}}</p>
+          <p>Network: {{findNetworkNameById(device.networkId)}}</p>
+          <p>Device type: {{findDeviceTypeNameById(device.deviceTypeId)}}</p>
+
+          <div class="form-group">
+            <label for="textAreaData">Data (json):</label>
+            <textarea readonly class="form-control-plaintext" id="textAreaData" rows="3" [(ngModel)]="device.data"></textarea>
+          </div>
+
+          <button class="btn btn-primary float-right btn-edit" (click)="openEditDeviceModal(editDeviceModal)">Edit</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <ngb-tabset>
     <ngb-tab title="Commands">
@@ -116,5 +135,23 @@
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="d('Cancel')">Cancel</button>
     <button type="button" class="btn btn-success" (click)="sendNewNotification()">Send</button>
+  </div>
+</ng-template>
+
+<ng-template #editDeviceModal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Edit user</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Close')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body" *ngIf="editDevice">
+    <dh-device [device]="editDevice" [networks]="networks" [deviceTypes]="deviceTypes"></dh-device>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="d('Cancel')">Cancel</button>
+    <button type="button" class="btn btn-success" (click)="updateDevice()">Save</button>
   </div>
 </ng-template>
