--- a/src/app/admin/devices/device-details/device-details.component.html
+++ b/src/app/admin/devices/device-details/device-details.component.html
@@ -140,7 +140,7 @@
 
 <ng-template #editDeviceModal let-c="close" let-d="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title">Edit user</h4>
+    <h4 class="modal-title">Edit device</h4>
     <button type="button" class="close" aria-label="Close" (click)="d('Close')">
       <span aria-hidden="true">&times;</span>
     </button>
