--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg" id="tour.start">
   <a class="navbar-brand" href="#">DeviceHive</a>
   <ul class="navbar-nav">
-    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="users" *ngIf="currentUser?.role === userRole.ADMIN">Users</a></li>
-    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="networks">Networks</a></li>
-    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="device-types">Device Types</a></li>
-    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="devices">Devices</a></li>
-    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="jwt-tokens">JWT Tokens</a></li>
+    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="users" *ngIf="currentUser?.role === userRole.ADMIN" id="menu.users">Users</a></li>
+    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="networks" id="menu.networks">Networks</a></li>
+    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="device-types" id="menu.device-types">Device Types</a></li>
+    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="devices" id="menu.devices">Devices</a></li>
+    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="jwt-tokens" id="menu.jwt">JWT Tokens</a></li>
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
