--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,38 @@ table {
   margin-top: $margin-base;
   margin-bottom: $margin-base;
 }
+
+/*
+App tour
+ */
+
+div.hopscotch-bubble .hopscotch-nav-button.next {
+  display: inline-block;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  font-size: 0.875rem;
+  line-height: 1.5;
+  border-radius: 0.2rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  color: #fff;
+  background: #007bff none;
+  border-color: #007bff;
+
+  &:hover {
+    color: #fff;
+    background: #0069d9 none;
+    border-color: #0062cc;
+  }
+}
+
+div.hopscotch-bubble .hopscotch-bubble-number {
+  background: #28a745;
+  border-radius: 50%;
+  padding: 0;
+}
