--- a/src/app/admin/users/user/user.component.html
+++ b/src/app/admin/users/user/user.component.html
@@ -1,17 +1,17 @@
 <div class="form-group">
-  <label for="inputLogin">Login</label>
+  <label for="inputLogin">Login <dh-tip [text]="helpService.getUserLoginTip()"></dh-tip></label>
   <input type="text" class="form-control" id="inputLogin" placeholder="Login" [(ngModel)]="user.login">
 </div>
 
 <div class="form-row">
   <div class="form-group col-6">
-    <label for="inputRole">Role</label>
+    <label for="inputRole">Role <dh-tip [text]="helpService.getUserRoleTip()"></dh-tip></label>
     <select id="inputRole" class="form-control" [(ngModel)]="user.role">
       <option *ngFor="let item of userRole | keys" [value]="item.key">{{item.value}}</option>
     </select>
   </div>
   <div class="form-group col-6">
-    <label for="inputStatus">Status</label>
+    <label for="inputStatus">Status <dh-tip [text]="helpService.getUserStatusTip()"></dh-tip></label>
     <select id="inputStatus" class="form-control" [(ngModel)]="user.status">
       <option *ngFor="let item of userStatus | keys" [value]="item.key">{{item.value}}</option>
     </select>
@@ -20,7 +20,7 @@
 
 <div class="form-row">
   <div class="form-group col-6">
-    <label for="inputPassword">Password</label>
+    <label for="inputPassword">Password <dh-tip [text]="helpService.getUserPasswordTip()"></dh-tip></label>
     <input type="password" class="form-control" id="inputPassword" placeholder="Password" [(ngModel)]="user.password">
   </div>
   <div class="form-group col-6">
@@ -30,6 +30,6 @@
 </div>
 
 <div class="form-group">
-  <label for="textAreaData">Data (json)</label>
+  <label for="textAreaData">Data <dh-tip [text]="helpService.getUserDataTip()"></dh-tip></label>
   <textarea class="form-control" id="textAreaData" rows="3" [(ngModel)]="user.data"></textarea>
 </div>
