--- a/src/app/admin/users/user-details/user-details.component.html
+++ b/src/app/admin/users/user-details/user-details.component.html
@@ -99,7 +99,7 @@
             </tr>
           </tbody>
         </table>
-        <p *ngIf="userDeviceTypes.length === 0" class="text-center">This user does not have access to any device types</p>
+        <p *ngIf="!user.allDeviceTypesAvailable && userDeviceTypes.length === 0" class="text-center">This user does not have access to any device types</p>
 
         <form class="form-inline" *ngIf="!user.allDeviceTypesAvailable">
           <label class="mr-2" for="inputDeviceType">Grant access to device type</label>
