--- a/src/app/admin/jwt-tokens/jwt-tokens.component.html
+++ b/src/app/admin/jwt-tokens/jwt-tokens.component.html
@@ -1,14 +1,25 @@
 <div class="container">
   <div *ngIf="accessToken && refreshToken">
     <div class="list-group">
-      <a class="list-group-item list-group-item-action flex-column align-items-start">
+      <a class="list-group-item  flex-column align-items-start">
+
         <div class="d-flex w-100 justify-content-between">
+          <button class="btn btn-sm btn-clipboard" [class.btn-success]= "isAccessTokenCopied" type="button"
+                  placement="bottom" data-container="body" [ngbTooltip]="'Copy to clipboard'"
+                  ngxClipboard [cbContent]="accessToken" (cbOnSuccess)="isAccessTokenCopied = true">
+            <fa name="copy"></fa>
+          </button>
           <h5>Access Token</h5>
         </div>
         <p>{{accessToken}}</p>
       </a>
 
-      <a class="list-group-item list-group-item-action flex-column align-items-start">
+      <a class="list-group-item  flex-column align-items-start">
+        <button class="btn btn-sm btn-clipboard" [class.btn-success]= "isRefreshTokenCopied" type="button"
+                placement="bottom" data-container="body" [ngbTooltip]="'Copy to clipboard'"
+                ngxClipboard [cbContent]="refreshToken" (cbOnSuccess)="isRefreshTokenCopied = true">
+          <fa name="copy"></fa>
+        </button>
         <div class="d-flex w-100 justify-content-between">
           <h5>Refresh Token</h5>
         </div>
