Added plugin section

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -6,6 +6,7 @@
     <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="device-types" id="menu.device-types">Device Types</a></li>
     <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="devices" id="menu.devices">Devices</a></li>
     <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="jwt-tokens" id="menu.jwt">JWT Tokens</a></li>
+    <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="plugins" id="menu.plugins">Plugins</a></li>
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
