--- a/src/app/admin/plugins/plugin/plugin.component.html
+++ b/src/app/admin/plugins/plugin/plugin.component.html
@@ -4,28 +4,28 @@
 
     <div class="form-group">
       <label for="inputName">Name
-        <dh-tip [text]="helpService.getDeviceNameTip()"></dh-tip>
+        <dh-tip [text]="helpService.getPluginNameTip()"></dh-tip>
       </label>
       <input type="text" class="form-control" id="inputName" placeholder="Name" [(ngModel)]="plugin.name">
     </div>
 
     <div class="form-group">
       <label for="textAreaDescription">Description
-        <dh-tip [text]="helpService.getNetworkDescriptionTip()"></dh-tip>
+        <dh-tip [text]="helpService.getPluginDescriptionTip()"></dh-tip>
       </label>
       <textarea class="form-control" id="textAreaDescription" rows="3" [(ngModel)]="plugin.description"></textarea>
     </div>
 
     <div class="form-group">
       <label for="textAreaData">Parameters
-        <dh-tip [text]="helpService.getUserDataTip()"></dh-tip>
+        <dh-tip [text]="helpService.getPluginParametersTip()"></dh-tip>
       </label>
       <textarea class="form-control" id="textAreaData" rows="3" [(ngModel)]="plugin.parameters"></textarea>
     </div>
   </div>
 
   <div class="col-sm">
-    <h5>Filters</h5>
+    <h5>Filters <dh-tip [text]="helpService.getPluginFiltersTip()"></dh-tip></h5>
 
     <div class="form-check">
       <input type="checkbox" class="form-check-input" id="checkReturnCommands" [(ngModel)]="plugin.returnCommands">
@@ -46,7 +46,7 @@
 
     <div class="form-group">
       <label for="inputName">Command/Notifications Names:
-        <dh-tip [text]="helpService.getDeviceNameTip()"></dh-tip>
+        <dh-tip [text]="helpService.getPluginNamesTip()"></dh-tip>
       </label>
       <input type="text" class="form-control" id="inputNames" placeholder="Names" [(ngModel)]="plugin.names">
     </div>
