--- a/src/app/admin/jwt-tokens/jwt-tokens.component.html
+++ b/src/app/admin/jwt-tokens/jwt-tokens.component.html
@@ -29,6 +29,9 @@
   </div>
 
   <div class="row justify-content-center">
+    <h5>Generate tokens <dh-tip [text]="helpService.getJwtTip()"></dh-tip></h5>
+  </div>
+  <div class="row justify-content-center">
     <form class="form-inline">
       <div class="form-group">
         <div class="input-group">
