Added a way to close expiration date dropdown in Tokens section

--- a/src/app/admin/jwt-tokens/jwt-tokens.component.html
+++ b/src/app/admin/jwt-tokens/jwt-tokens.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container jwt-tokens">
   <div *ngIf="accessToken && refreshToken">
     <div class="list-group">
       <a class="list-group-item  flex-column align-items-start">
