--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg" id="tour.start">
-  <a class="navbar-brand" href="#">DeviceHive</a>
+  <a class="navbar-brand" routerLink="devices">DeviceHive</a>
   <ul class="navbar-nav">
     <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="users" *ngIf="currentUser?.role === userRole.ADMIN" id="menu.users">Users</a></li>
     <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="networks" id="menu.networks">Networks</a></li>
