--- a/src/app/admin/networks/networks.component.html
+++ b/src/app/admin/networks/networks.component.html
@@ -20,6 +20,7 @@
       </tr>
       </tbody>
     </table>
+    <p *ngIf="networks && networks.length === 0" class="text-center">You do not belong to any networks</p>
   </div>
 
   <button class="btn btn-success float-right btn-add" *ngIf="isAdmin" (click)="openNetworkModal(newNetworkModal)">Add new network</button>
