Now properly clears typeahead value

--- a/src/app/admin/plugins/plugin/plugin.component.html
+++ b/src/app/admin/plugins/plugin/plugin.component.html
@@ -83,6 +83,7 @@
         [(ngModel)]="tempNetwork"
         [ngbTypeahead]="searchNetwork"
         (focus)="networksFocus.next($event.target.value)"
+        (focusout)="clearNetwork()"
         (click)="networksClick.next($event.target.value)"
         [inputFormatter]="formatter"
         [resultTemplate]="rt"
@@ -105,6 +106,7 @@
         [(ngModel)]="tempDeviceType"
         [ngbTypeahead]="searchDeviceType"
         (focus)="deviceTypesFocus.next($event.target.value)"
+        (focusout)="clearDeviceType()"
         (click)="deviceTypesClick.next($event.target.value)"
         [inputFormatter]="formatter"
         [resultTemplate]="rt"
