Now also clears device input during plugin creation

--- a/src/app/admin/plugins/plugin/plugin.component.html
+++ b/src/app/admin/plugins/plugin/plugin.component.html
@@ -62,6 +62,7 @@
         [(ngModel)]="plugin.device"
         [ngbTypeahead]="searchDevice"
         (focus)="deviceFocus.next($event.target.value)"
+        (focusout)="clearDevice()"
         (click)="deviceClick.next($event.target.value)"
         [inputFormatter]="formatter"
         [resultTemplate]="rt"
